--- a/MyApplication/app/src/main/res/drawable/frontpagebutton.xml
+++ b/MyApplication/app/src/main/res/drawable/frontpagebutton.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
     <!-- you can use any color you want I used here gray color-->
-    <solid android:color="@android:color/holo_blue_light"/>
+    <solid android:color="@color/buttonColor"/>
     <corners android:bottomRightRadius="3dp"
         android:bottomLeftRadius="3dp"
         android:topLeftRadius="3dp"
