--- a/MyApplication/app/src/main/res/layout/registrationpage.xml
+++ b/MyApplication/app/src/main/res/layout/registrationpage.xml
@@ -2,41 +2,30 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_light">
+    android:background="@drawable/background5">
 
-
-    <TextView
-        android:id="@+id/gametitle"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="50dp"
-        android:text="The Avengers"
-        android:textSize="55dp"
-        android:textColor="@android:color/white"
-        android:fontFamily="cursive"
-        android:textStyle="italic"/>
-
+        android:paddingLeft="20dp">
     <TextView
         android:id="@+id/usernameRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username :"
+        android:text="@string/user_name"
         android:textSize="20dp"
         android:textColor="@android:color/white"
-        android:layout_below="@+id/gametitle"
-        android:layout_alignLeft="@+id/gametitle"
-        android:layout_marginTop="50dp"/>
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="15dp" />
 
     <EditText
         android:id="@+id/usernameRegisterText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/usernameRegister"
-        android:layout_alignLeft="@+id/gametitle"
-        android:layout_alignRight="@+id/gametitle"
         android:textColor="@android:color/white"
-        android:padding="5dp"
+        android:padding="2dp"
         android:background="@drawable/registrationedittext"
         android:maxLines="1" />
 
@@ -44,22 +33,19 @@
         android:id="@+id/passwordRegister"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Password :"
+        android:text="@string/password"
         android:textSize="20dp"
         android:textColor="@android:color/white"
         android:layout_below="@+id/usernameRegisterText"
-        android:layout_marginTop="30dp"
-        android:layout_alignLeft="@+id/gametitle"/>
+        android:layout_marginTop="15dp" />
 
     <EditText
         android:id="@+id/passwordRegisterText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/passwordRegister"
-        android:layout_alignLeft="@+id/gametitle"
-        android:layout_alignRight="@+id/gametitle"
         android:textColor="@android:color/white"
-        android:padding="5dp"
+        android:padding="2dp"
         android:background="@drawable/registrationedittext"
         android:maxLines="1"/>
 
@@ -67,50 +53,48 @@
         android:id="@+id/passwordRegisterConfirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Confirm Password :"
+        android:text="@string/confirm_password"
         android:textSize="20dp"
         android:textColor="@android:color/white"
         android:layout_below="@+id/passwordRegisterText"
-        android:layout_marginTop="30dp"
-        android:layout_alignLeft="@+id/gametitle"/>
+        android:layout_marginTop="15dp" />
 
     <EditText
         android:id="@+id/passwordConfirmText"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/passwordRegisterConfirm"
-        android:layout_alignLeft="@+id/gametitle"
-        android:layout_alignRight="@+id/gametitle"
         android:textColor="@android:color/white"
-        android:padding="5dp"
+        android:padding="2dp"
         android:background="@drawable/registrationedittext"
         android:maxLines="1"/>
 
     <Button
         android:id="@+id/registerButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@+id/passwordConfirmText"
         android:layout_alignLeft="@+id/passwordConfirmText"
         android:layout_alignRight="@+id/passwordConfirmText"
-        android:layout_marginTop="30dp"
-        android:text="Register NOW"
+        android:layout_marginTop="15dp"
+        android:text="@string/register_now"
         android:textColor="@android:color/white"
         android:textSize="20dp"
-        android:background="@android:color/holo_blue_dark"/>
+        android:background="@color/buttonColor"/>
 
     <Button
         android:id="@+id/cancelButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_below="@+id/registerButton"
         android:layout_alignLeft="@+id/passwordConfirmText"
         android:layout_alignRight="@+id/passwordConfirmText"
         android:layout_marginTop="10dp"
-        android:text="Cancel"
+        android:text="@string/cancel"
         android:textColor="@android:color/white"
         android:textSize="20dp"
-        android:background="@android:color/holo_blue_dark"/>
+        android:background="@color/buttonColor"/>
 
+    </RelativeLayout>
 
 </RelativeLayout>
