--- a/MyApplication/app/src/main/res/values/colors.xml
+++ b/MyApplication/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="buttonColor">#0B2349</color>
+    <color name="location">#0000E5</color>
+    <color name="distance">#ffffff</color>
+    <color name="userProfileDialog_UserNameColor">#ffffff</color>
 </resources>
