--- a/MyApplication/app/src/main/res/layout/gamepage.xml
+++ b/MyApplication/app/src/main/res/layout/gamepage.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgoundmap"
+    android:background="@drawable/bg_mappage"
 >
 
     <Button
@@ -10,7 +10,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        android:background="@drawable/gameuser"
+        android:background="#00000000"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_marginLeft="20dp"
@@ -43,43 +43,51 @@
 
     <Button
         android:id="@+id/location1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/location"
-        android:text="@string/location1"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="100dp"/>
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:background="#00000000"
+        android:layout_marginTop="120dp"
+        android:layout_marginLeft="95dp"/>
 
     <Button
         android:id="@+id/location2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/location"
-        android:text="@string/location2"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="200dp" />
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:background="#00000000"
+        android:layout_marginTop="200dp"
+        android:layout_marginLeft="207dp" />
 
     <Button
         android:id="@+id/location3"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@drawable/location"
-        android:text="@string/location3"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="200dp"
-        android:layout_marginLeft="300dp"/>
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:background="#00000000"
+        android:layout_marginTop="120dp"
+        android:layout_marginLeft="303dp"/>
 
     <Button
         android:id="@+id/location4"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:background="@drawable/location"
-        android:text="@string/location4"
-        android:textColor="@android:color/white"
-        android:layout_marginTop="100dp"
-        android:layout_marginLeft="400dp"/>
+        android:background="#00000000"
+        android:layout_marginTop="90dp"
+        android:layout_marginLeft="450dp"/>
+
+    <Button
+        android:id="@+id/location5"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="#00000000"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="245dp"/>
+
+    <Button
+        android:id="@+id/location6"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:background="#00000000"
+        android:layout_marginTop="233dp"
+        android:layout_marginLeft="402dp"/>
 
     <ImageView
         android:id="@+id/thumbnail"
