--- a/MyApplication/app/src/main/res/drawable/location.xml
+++ b/MyApplication/app/src/main/res/drawable/location.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
-    <item>
-        <shape android:shape="oval">
-            <stroke
-                android:width="10dp"
-                android:color="@color/location"/>
-        </shape>
-    </item>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="oval">
 
-</layer-list>
+    <solid android:color="@android:color/holo_red_dark"/>
+
+</shape>
