--- a/MyApplication/app/src/main/res/layout/gamepage.xml
+++ b/MyApplication/app/src/main/res/layout/gamepage.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/myLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bg_mappage"
@@ -88,12 +89,6 @@
         android:background="#00000000"
         android:layout_marginTop="233dp"
         android:layout_marginLeft="402dp"/>
-
-    <ImageView
-        android:id="@+id/thumbnail"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:src="@drawable/touxiang"/>
 
     <Button
         android:id="@+id/stepTest"
