--- a/MyApplication_V1/app/src/main/res/layout/activity_menu.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/activity_menu"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,7 +10,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="mangoabliu.finalproject.MenuActivity"
-    android:background="@drawable/bg_indexpage">
+    android:background="@drawable/bg_indexpage"
+    >
 
     <Button
         android:layout_width="match_parent"
@@ -17,4 +19,15 @@
         android:id="@+id/btn_SwitchLogin"
         android:layout_centerHorizontal="true"
         android:background="@color/transparent"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:paddingBottom="15dp"
+        android:paddingStart="120dp"
+        android:id="@+id/tv_menu"
+        android:text="Touch on the Screen to Start Battle..."
+        android:textColor="#AFFF"
+        android:textSize="20sp"/>
 </RelativeLayout>
