--- a/MyApplication_V1/app/src/main/res/layout/activity_login.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
             android:layout_width="@dimen/btn_side"
             android:layout_height="@dimen/btn_side"
             android:background="@color/transparent"
-            android:text="t_r"
+            android:text="@string/testtext"
             android:layout_gravity="center_vertical"/>
 
         <RelativeLayout
@@ -91,7 +91,7 @@
             android:layout_width="@dimen/btn_side"
             android:layout_height="@dimen/btn_side"
             android:background="@color/transparent"
-            android:text="t_l"
+            android:text="@string/testtext"
             android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
