--- a/MyApplication_V1/app/src/main/res/values/styles.xml
+++ b/MyApplication_V1/app/src/main/res/values/styles.xml
@@ -9,4 +9,15 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <!-- DialogTranslucent / 浮现在activity上 / 背景透明  -->
+    <style name="DialogTranslucent" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
 </resources>
