--- a/MyApplication_V1/app/src/main/res/values/colors.xml
+++ b/MyApplication_V1/app/src/main/res/values/colors.xml
@@ -8,7 +8,11 @@
     <color name="distance">#ffffff</color>
     <color name="userProfileDialog_UserNameColor">#ffffff</color>
 
+
+    <!-- menu/ login/ registration -->
     <color name="transparent">#0000</color>  //test #5000  , act #0000
     <color name="clr_login_text">#88d4db</color>
     <color name="clr_register_text">#f2e3b4</color>
+    <color name="clr_menu_text">#AFFF</color>
+
 </resources>
