--- a/MyApplication_V1/app/src/main/res/layout/activity_registration.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_registration.xml
@@ -85,7 +85,8 @@
                 android:backgroundTint="@android:color/white"
                 android:background="@drawable/edittext"
                 android:maxLines="1"
-                android:imeOptions="flagNoExtractUi|actionNext"/>
+                android:inputType="textPassword"
+                android:imeOptions="flagNoExtractUi|actionNext" />
 
             <EditText
                 android:id="@+id/passwordConfirmText"
@@ -100,7 +101,16 @@
                 android:backgroundTint="@android:color/white"
                 android:background="@drawable/edittext"
                 android:maxLines="1"
-                android:imeOptions="flagNoExtractUi"/>
+                android:inputType="textPassword"
+                android:imeOptions="flagNoExtractUi" />
+
+            <CheckBox
+                android:id="@+id/cb_showconfirmpassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/passwordRegisterConfirm"
+                android:textColor="@color/clr_register_text"
+                android:text="@string/login_cipher_pw"/>
 
         </RelativeLayout>
 
