--- a/MyApplication_V1/app/src/main/res/layout/activity_game.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_game.xml
@@ -3,8 +3,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/myLayout"
-    android:background="@drawable/bg_mappage"
+    android:background="@drawable/bg_mappage_copy"
     >
+    <RelativeLayout android:layout_height="360dp"
+        android:layout_width="600dp" />
 
     <Button
         android:id="@+id/userProfile"
@@ -71,7 +73,7 @@
             android:layout_marginLeft="207dp" />
 
         <Button
-            android:id="@+id/location3"
+            android:id="@+id/location4"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:background="#00000000"
@@ -79,7 +81,7 @@
             android:layout_marginLeft="303dp"/>
 
         <Button
-            android:id="@+id/location4"
+            android:id="@+id/location5"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:background="#00000000"
@@ -87,7 +89,7 @@
             android:layout_marginLeft="450dp"/>
 
         <Button
-            android:id="@+id/location5"
+            android:id="@+id/location3"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:background="#00000000"
