--- a/MyApplication_V1/app/src/main/res/layout/activity_registration.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_registration.xml
@@ -16,7 +16,7 @@
             android:layout_width="@dimen/btn_side"
             android:layout_height="@dimen/btn_side"
             android:background="@color/transparent"
-            android:text="t_r"
+            android:text="@string/testtext"
             android:layout_gravity="center_vertical"/>
 
         <RelativeLayout
@@ -85,7 +85,8 @@
                 android:backgroundTint="@android:color/white"
                 android:background="@drawable/edittext"
                 android:maxLines="1"
-                android:imeOptions="flagNoExtractUi|actionNext"/>
+                android:inputType="textPassword"
+                android:imeOptions="flagNoExtractUi|actionNext" />
 
             <EditText
                 android:id="@+id/passwordConfirmText"
@@ -100,7 +101,16 @@
                 android:backgroundTint="@android:color/white"
                 android:background="@drawable/edittext"
                 android:maxLines="1"
-                android:imeOptions="flagNoExtractUi"/>
+                android:inputType="textPassword"
+                android:imeOptions="flagNoExtractUi" />
+
+            <CheckBox
+                android:id="@+id/cb_showconfirmpassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/passwordRegisterConfirm"
+                android:textColor="@color/clr_register_text"
+                android:text="@string/login_cipher_pw"/>
 
         </RelativeLayout>
 
@@ -109,7 +119,7 @@
             android:layout_width="@dimen/btn_side"
             android:layout_height="@dimen/btn_side"
             android:background="@color/transparent"
-            android:text="t_c"
+            android:text="@string/testtext"
             android:layout_gravity="center_vertical"/>
 
     </LinearLayout>
