--- a/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="300dp"
-    android:layout_height="300dp"
+    android:layout_width="@dimen/location_side"
+    android:layout_height="@dimen/location_side"
     android:background="@drawable/destination_midgard">
 
 
@@ -44,9 +44,10 @@
         android:layout_height="100dp"
         android:src="@drawable/planet1"
         android:layout_marginLeft="20dp"
-        android:layout_marginBottom="36dp"
+        android:layout_marginBottom="100dp"
         android:layout_above="@+id/locationGo"
         android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
         android:layout_marginStart="53dp" />
 
     <Button
