--- a/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="@dimen/location_side"
     android:layout_height="@dimen/location_side"
-    android:background="@drawable/destination_midgard">
+    android:background="@drawable/destination">
 
 
     <TextView
