--- a/MyApplication_V1/app/src/main/res/layout/activity_carddrop.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_carddrop.xml
@@ -10,54 +10,51 @@
 
             <ImageButton
                 android:id="@+id/userProfile"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
+                android:layout_width="@dimen/carddrop_icon_width"
+                android:layout_height="@dimen/carddrop_icon_height"
                 android:layout_centerHorizontal="true"
                 android:background="@drawable/usericon"
                 android:layout_alignParentTop="true"
-                android:layout_alignParentLeft="true"
-                android:layout_marginLeft="10dp"
-                android:layout_marginTop="10dp"/>
+                android:layout_alignParentStart="true"
+                android:layout_marginStart="@dimen/carddrop_icon_marginStart"
+                android:layout_marginTop="@dimen/carddrop_icon_marginTop"/>
 
          <Button
-             android:id="@+id/ReturnMain"
-             android:layout_width="40dp"
-             android:layout_height="30dp"
+             android:id="@+id/btn_returnMain"
+             android:layout_width="@dimen/carddrop_btn_width"
+             android:layout_height="@dimen/carddrop_btn_height"
              android:layout_centerHorizontal="true"
-             android:background="#fff"
+             android:background="@color/clr_test"
              android:layout_alignParentTop="true"
-             android:layout_alignParentRight="true"
-             android:layout_marginRight="20dp"
-             android:layout_marginTop="20dp"/>
-
-
-
+             android:layout_alignParentEnd="true"
+             android:layout_marginEnd="@dimen/carddrop_btn_marginEnd"
+             android:layout_marginTop="@dimen/carddrop_btn_marginTop"/>
 
         <RelativeLayout
             android:id="@+id/CardRootM"
-            android:layout_width="130dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/carddrop_cardlayout_width"
+            android:layout_height="@dimen/carddrop_cardlayout_height"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:background="#09000000">
 
         <ImageView
             android:id="@+id/CardBackM"
-            android:layout_width="130dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/carddrop_cardlayout_width"
+            android:layout_height="@dimen/carddrop_cardlayout_height"
             android:layout_centerInParent="true" />
 
         <ImageView
             android:id="@+id/CardFrontM"
-            android:layout_width="130dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/carddrop_cardlayout_width"
+            android:layout_height="@dimen/carddrop_cardlayout_height"
             android:layout_centerInParent="true" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/CardRootR"
-            android:layout_width="130dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/carddrop_cardlayout_width"
+            android:layout_height="@dimen/carddrop_cardlayout_height"
             android:layout_toEndOf="@id/CardRootM"
             android:layout_centerVertical="true"
             android:layout_marginStart="30dp"
@@ -65,21 +62,21 @@
 
         <ImageView
             android:id="@+id/CardBackR"
-            android:layout_width="130dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/carddrop_cardlayout_width"
+            android:layout_height="@dimen/carddrop_cardlayout_height"
             android:layout_centerInParent="true" />
 
         <ImageView
             android:id="@+id/CardFrontR"
-            android:layout_width="130dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/carddrop_cardlayout_width"
+            android:layout_height="@dimen/carddrop_cardlayout_height"
             android:layout_centerInParent="true" />
         </RelativeLayout>
 
         <RelativeLayout
             android:id="@+id/CardRootL"
-            android:layout_width="130dp"
-            android:layout_height="200dp"
+            android:layout_width="@dimen/carddrop_cardlayout_width"
+            android:layout_height="@dimen/carddrop_cardlayout_height"
             android:layout_toStartOf="@id/CardRootM"
             android:layout_centerVertical="true"
             android:layout_marginEnd="30dp"
@@ -87,14 +84,14 @@
 
                <ImageView
                    android:id="@+id/CardBackL"
-                   android:layout_width="130dp"
-                   android:layout_height="200dp"
+                   android:layout_width="@dimen/carddrop_cardlayout_width"
+                   android:layout_height="@dimen/carddrop_cardlayout_height"
                    android:layout_centerInParent="true" />
 
                <ImageView
                    android:id="@+id/CardFrontL"
-                   android:layout_width="130dp"
-                   android:layout_height="200dp"
+                   android:layout_width="@dimen/carddrop_cardlayout_width"
+                   android:layout_height="@dimen/carddrop_cardlayout_height"
                    android:layout_centerInParent="true" />
                </RelativeLayout>
 
