取消点击对话框外直接退出
取消点击对话框外直接退出

--- a/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
@@ -3,6 +3,7 @@
     android:orientation="vertical"
     android:layout_width="@dimen/location_side"
     android:layout_height="@dimen/location_side"
+    android:layout_gravity="center"
     android:background="@drawable/destination">
 
 
