--- a/MyApplication_V1/app/src/main/res/layout/activity_game.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_game.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/myLayout"
-    android:background="@drawable/bg_mappage_copy"
+    android:background="@drawable/bg_mappage"
     >
     <RelativeLayout android:layout_height="360dp"
         android:layout_width="600dp" />
