--- a/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
@@ -19,45 +19,52 @@
         android:background="@color/transparent"/>
 
 
+    <RelativeLayout
+        android:layout_width="@dimen/location_inner_width"
+        android:layout_height="@dimen/location_inner_height"
+        android:layout_gravity="center"
+        android:layout_centerInParent="true"
+        android:paddingEnd="@dimen/location_inner_padding"
+        android:paddingBottom="@dimen/location_inner_padding">
+
+        <ImageView
+            android:id="@+id/locationImage"
+            android:layout_width="@dimen/location_img_width"
+            android:layout_height="@dimen/location_img_height"
+            android:src="@drawable/card_back"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"/>
+
+        <Button
+            android:id="@+id/dropCard"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/DropCard"
+            android:layout_marginStart="10dp"
+            android:layout_alignTop="@+id/locationImage"
+            android:layout_toEndOf="@+id/locationImage" />
+
+        <Button
+            android:id="@+id/locationDialogCancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cancel"
+            android:layout_below="@+id/dropCard"
+            android:layout_alignStart="@+id/dropCard"
+            android:layout_alignEnd="@+id/dropCard" />
+
+    </RelativeLayout>
+
+
     <Button
         android:id="@+id/locationGo"
         android:layout_width="@dimen/location_btn_go"
         android:layout_height="@dimen/location_btn_go"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="@dimen/location_btn_margin"
         android:layout_marginEnd="@dimen/location_btn_margin"
-        android:background="@color/transparent"
+        android:background="@color/btn_test"
         android:text="@string/Go"/>
-
-    <Button
-        android:id="@+id/dropCard"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/DropCard"
-        android:layout_marginStart="10dp"
-        android:layout_alignTop="@+id/locationImage"
-        android:layout_toEndOf="@+id/locationImage" />
-
-    <ImageView
-        android:id="@+id/locationImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/planet1"
-        android:layout_marginLeft="20dp"
-        android:layout_marginBottom="100dp"
-        android:layout_above="@+id/locationGo"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="53dp" />
-
-    <Button
-        android:id="@+id/locationDialogCancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cancel"
-        android:layout_below="@+id/dropCard"
-        android:layout_alignStart="@+id/dropCard"
-        android:layout_alignEnd="@+id/dropCard" />
 
 </RelativeLayout>
