--- a/MyApplication_V1/app/src/main/res/layout/activity_game.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_game.xml
@@ -32,7 +32,7 @@
         android:layout_marginBottom="20dp"/>
 
 
-    <TextView
+    <mangoabliu.finalproject.FontTextView
         android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
