--- a/MyApplication_V1/app/src/main/res/layout/activity_menu.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_menu.xml
@@ -19,7 +19,7 @@
         android:id="@+id/btn_SwitchLogin"
         android:layout_centerHorizontal="true"
         android:background="@color/transparent"/>
-    <TextView
+    <mangoabliu.finalproject.Layout.FontTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
