删除dialog中cancel键 改为触屏外退出
删除dialog中cancel键 改为触屏外退出

--- a/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_location.xml
@@ -44,14 +44,14 @@
             android:layout_alignTop="@+id/locationImage"
             android:layout_toEndOf="@+id/locationImage" />
 
-        <Button
-            android:id="@+id/locationDialogCancel"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cancel"
-            android:layout_below="@+id/dropCard"
-            android:layout_alignStart="@+id/dropCard"
-            android:layout_alignEnd="@+id/dropCard" />
+        <!--<Button-->
+            <!--android:id="@+id/locationDialogCancel"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text="@string/cancel"-->
+            <!--android:layout_below="@+id/dropCard"-->
+            <!--android:layout_alignStart="@+id/dropCard"-->
+            <!--android:layout_alignEnd="@+id/dropCard" />-->
 
     </RelativeLayout>
 
