--- a/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
+++ b/MyApplication_V1/app/src/main/res/layout/dialog_userprofile.xml
@@ -46,90 +46,26 @@
         android:layout_marginStart="@dimen/userfile_scroll_marginHorizontal"
         android:layout_marginEnd="@dimen/userfile_scroll_marginHorizontal">
 
-        <TableLayout
+
+        <GridView
+            android:id="@+id/gridview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/transparent"
-            android:orientation="vertical">
-
-            <TableRow
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:paddingBottom="@dimen/userfile_table_padding"
-                android:weightSum="1">
-
-                <ImageView
-                    android:layout_width="@dimen/card_layout_width"
-                    android:layout_height="@dimen/card_layout_height"
-                    android:paddingStart="@dimen/userfile_table_padding"
-                    android:src="@drawable/card_r_magneto"
-                    android:scaleType="fitXY"
-                    android:layout_weight="0.25"/>
-
-                <ImageView
-                    android:layout_width="@dimen/card_layout_width"
-                    android:layout_height="@dimen/card_layout_height"
-                    android:paddingStart="@dimen/userfile_table_padding"
-                    android:src="@drawable/card_r_magneto"
-                    android:scaleType="fitXY"
-                    android:layout_weight="0.25"/>
-
-                <ImageView
-                    android:layout_width="@dimen/card_layout_width"
-                    android:layout_height="@dimen/card_layout_height"
-                    android:paddingStart="@dimen/userfile_table_padding"
-                    android:src="@drawable/card_r_magneto"
-                    android:scaleType="fitXY"
-                    android:layout_weight="0.25"/>
-                <ImageView
-                    android:layout_width="@dimen/card_layout_width"
-                    android:layout_height="@dimen/card_layout_height"
-                    android:paddingStart="@dimen/userfile_table_padding"
-                    android:src="@drawable/card_r_magneto"
-                    android:scaleType="fitXY"
-                    android:layout_weight="0.25"/>
-            </TableRow>
+            android:layout_height="match_parent"
+            android:layout_marginTop="@dimen/userfile_scroll_marginTop"
+            android:layout_marginBottom="@dimen/userfile_scroll_marginBottom"
+            android:layout_marginStart="@dimen/userfile_scroll_marginHorizontal"
+            android:layout_marginEnd="@dimen/userfile_scroll_marginHorizontal"
+            android:columnWidth="90dp"
+            android:numColumns="auto_fit"
+            android:stretchMode="columnWidth"
+            android:horizontalSpacing="10dp"
+            android:verticalSpacing="10dp"
+            android:layout_gravity="center"
 
 
-            <TableRow
-                android:layout_height="wrap_content"
-                android:layout_width="wrap_content"
-                android:weightSum="1">
 
+          />
 
-                <ImageView
-                    android:layout_width="@dimen/card_layout_width"
-                    android:layout_height="@dimen/card_layout_height"
-                    android:paddingStart="@dimen/userfile_table_padding"
-                    android:src="@drawable/card_r_magneto"
-                    android:scaleType="fitXY"
-                    android:layout_weight="0.25"/>
-
-                <ImageView
-                    android:layout_width="@dimen/card_layout_width"
-                    android:layout_height="@dimen/card_layout_height"
-                    android:paddingStart="@dimen/userfile_table_padding"
-                    android:src="@drawable/card_r_magneto"
-                    android:scaleType="fitXY"
-                    android:layout_weight="0.25"/>
-
-                <ImageView
-                    android:layout_width="@dimen/card_layout_width"
-                    android:layout_height="@dimen/card_layout_height"
-                    android:paddingStart="@dimen/userfile_table_padding"
-                    android:src="@drawable/card_r_magneto"
-                    android:scaleType="fitXY"
-                    android:layout_weight="0.25"/>
-                <ImageView
-                    android:layout_width="@dimen/card_layout_width"
-                    android:layout_height="@dimen/card_layout_height"
-                    android:paddingStart="@dimen/userfile_table_padding"
-                    android:src="@drawable/card_r_magneto"
-                    android:scaleType="fitXY"
-                    android:layout_weight="0.25"/>
-            </TableRow>
-
-        </TableLayout>
 
     </ScrollView>
 
