--- a/MyApplication_V1/app/src/main/res/values/colors.xml
+++ b/MyApplication_V1/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="clr_login_text">#88d4db</color>
     <color name="clr_register_text">#f2e3b4</color>
     <color name="clr_menu_text">#AFFF</color>
+    <color name="clr_battle_text">#DFFF</color>
 
     <!-- map -->
     <color name="clr_map_text">#AA82d0d8</color>  //DARKER:#49858b
