--- a/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
+++ b/MyApplication_V1/app/src/main/res/layout/activity_battle.xml
@@ -34,6 +34,10 @@
 
     <!-- Planet Icon -->
     <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/battle_border"/>
+    <ImageView
         android:id="@+id/img_battle_planet"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
